fixed console overlaping sidenav

--- a/staf-frontend/src/app/sidenav/sidenav.component.css
+++ b/staf-frontend/src/app/sidenav/sidenav.component.css
@@ -1,3 +1,7 @@
 button, span {
     cursor: pointer;
 }
+
+.root-tree-node-height {
+    height: 540px;
+}
